2011-02-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: fixed bug #3191324: PIC instructions in documentation

2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-z80.def:
	  Minor peephole fix.

2011-02-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genCmp): removed regression, fixes bug 3090354

2011-01-19 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug-3184920.c:
	  Disabled for hc08.

2011-02-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c,
	* debugger/mcs51/sdcdb.c,
	* debugger/mcs51/simi.c,
	* debugger/mcs51/symtab.c,
	* src/SDCCargs.h,
	* src/version.awk: cosmetic changes
	* src/pic14/gen.c (genDataPointerSet),
	* src/pic14/glue.c (emitIvals),
	* src/SDCCsystem.c: fixed warnings
	* src/SDCCerr.c (setWarningDisabled): check errNum
	* src/SDCCpeeph.c: added optimizeReturn
	* src/mcs51/peeph.def: disabled 237.x, fixed bug 1653651
	* src/SDCCglobl.h: added options.peepReturn
	* src/SDCCmain.c (parseCmdLine): added --peep-return & --no-peep-return
	* support/scripts/resource.rc: replaced include "winres.h" with "winresrc.h"
	* support/scripts/winres.h: deleted

2011-01-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def,
	  support/regression/tests/bug-3184920.c:
	  Fixed #3184920.

2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix for --reserve-regs-iy from optralloc branch.

2011-02-17 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: use ${IsNT} from WinVer.nsh

2011-02-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improvements from optralloc branch.

2011-02-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/src.dsp: added some header files, added Resource Files group
	* src/version.awk: added SDCC_BUILD_NR
	* support/scripts/resource.rc: added VERSIONINFO

2011-02-07 Borut Razem <borut.razem AT gmail.com>
